# market_radar

./: .gitignore  README.md  pyproject.toml
src/market_radar_cli/: __init__.py  __main__.py  hh_client.py  main.py
